* Fixed bug with overflow of font-awesome icons stretching width of body

--- a/stylesheets/sass/index.scss
+++ b/stylesheets/sass/index.scss
@@ -169,6 +169,8 @@ h2 > img{
   position: relative;
   text-align: center;
   height: 0px;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 992px){
